# reader-gui

./: .gitignore  BUILD.md  CHANGELOG.md  IMPLEMENTATION_GUIDE.md  README.md  RELEASE_NOTES.md  TODO.md  pyproject.toml  test_dependency_popup.py
.github/: FUNDING.yml
.github/workflows/: build-release.yml
audio/: test_chunked_kokoro_am_michael.checkpoint
build_scripts/: __init__.py  build_linux.py  build_macos.py  build_windows.py  package_linux.py  package_windows.py
reader_gui/: __init__.py  app_dirs.py  dependency_check.py  gui.py  startup_diagnostics.py  threads.py  visualization.py
reader_gui/assets/: README.md  icon.icns
tests/: __init__.py
